--- a/ex2/index.html
+++ b/ex2/index.html
@@ -10,8 +10,8 @@
     <form action="">
         <label for="a">Liczba 1</label><br>
         <input type="number" name="a" id="a"><br>
-        <label for="chars">Wybierz znak</label>
-        <input type="text" name="char" id="char">
+        <label for="chars">Wpisz znak</label>
+        <input type="text" name="char" id="char"><br>
         <label for="b">Liczba 2</label><br>
         <input type="number" name="b" id="b"><br>
         <input id="calc" type="button" value="Wykonaj">
