checking isNan and layout change

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -10,7 +10,7 @@
     <form action="">
         <label for="a">Liczba 1</label><br>
         <input type="number" name="a" id="a"><br>
-        <label for="chars">Wpisz znak</label>
+        <label for="chars">Wpisz znak</label><br>
         <input type="text" name="char" id="char"><br>
         <label for="b">Liczba 2</label><br>
         <input type="number" name="b" id="b"><br>
