--- a/10.10.22/Ex.3/index.html
+++ b/10.10.22/Ex.3/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="app.js"></script>
 </head>
-<body onLoad="tip()">
+<body>
     
     <form action="#">
         <textarea name="tipBox" id="tipBox" cols="30" rows="3"></textarea>
