--- a/17.10.22-Objects/assoc-array-example/index.html
+++ b/17.10.22-Objects/assoc-array-example/index.html
@@ -13,6 +13,7 @@
             <option value="Kowalski">Kowalski</option>
             <option value="Malinowski">Malinowski</option>
             <option value="Nowak">Nowak</option>
+            <option value="Łukasz">Łukasz</option>
         </select>
         <br>
         <label for="number">numer</label>
