--- a/02.01.23/index.html
+++ b/02.01.23/index.html
@@ -6,7 +6,7 @@
     <title>Stoper</title>
     <link rel="stylesheet" href="style.css">
     <!-- Trzeba wygenerować -->
-    <script src="https://kit.fontawesome.com/.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f69759da29.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
