--- a/02.01.23/index.html
+++ b/02.01.23/index.html
@@ -10,9 +10,31 @@
 </head>
 
 <body>
-
-
-
+    <div class="wrapper">
+        <p class="info"><i class="fas fa-question"></i></p>
+        <h1>Stoper</h1>
+        <p class="stopwatch">0:00</p>
+        <p class="time">0:00</p>
+        <div class="buttons">
+            <button class="start"><i class="fas fa-play"></i></button>
+            <button class="pause"><i class="fas fa-pause"></i></button>
+            <button class="stop"><i class="fas fa-stop"></i></button>
+            <button class="reset"><i class="fas fa-times"></i></button>
+            <button class="history">archiwum</button>
+        </div>
+        <ul class="time-list"></ul>
+    </div>
+    <div class="modal-shadow">
+        <div class="modal">
+            <h3>Instrukcja:</h3>
+            <p><i class="fas fa-play"></i> - start</p>
+            <p><i class="fas fa-pause"></i> - pauza</p>
+            <p><i class="fas fa-stop"></i> - stop</p>
+            <p><i class="fas fa-times"></i> - skasuj wszystko (łącznie z archiwum)</p>
+            <p><strong>archiwum</strong> - zobacz wcześniejsze pomiary</p>
+            <button class="close">Zamknij</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
