Add custom script and some style

--- a/02.01.23/index.html
+++ b/02.01.23/index.html
@@ -14,7 +14,7 @@
         <p class="info"><i class="fas fa-question"></i></p>
         <h1>Stoper</h1>
         <p class="stopwatch">0:00</p>
-        <p class="time">0:00</p>
+        <p class="time"></p>
         <div class="buttons">
             <button class="start"><i class="fas fa-play"></i></button>
             <button class="pause"><i class="fas fa-pause"></i></button>
@@ -31,7 +31,7 @@
             <p><i class="fas fa-pause"></i> - pauza</p>
             <p><i class="fas fa-stop"></i> - stop</p>
             <p><i class="fas fa-times"></i> - skasuj wszystko (łącznie z archiwum)</p>
-            <p><strong>archiwum</strong> - zobacz wcześniejsze pomiary</p>
+            <p><strong>ARCHIWUM</strong> - zobacz wcześniejsze pomiary</p>
             <button class="close">Zamknij</button>
         </div>
     </div>
