--- a/Exam/index.html
+++ b/Exam/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kwiaty</title>
+    <link rel="stylesheet" href="styles/styl3.css">
 </head>
 <body>
-
+<header>
+<h1>Grupa Polskich Kwiaciarni</h1>
+</header>
+<aside>
+<h2>Menu</h2>
+    <ul>
+        <li><a href="index.html">Strona Główna</a></li>
+        <li><a href="http://www.swiatkwiatow.pl/">Rozpoznaj kwiaty</a></li>
+        <li>
+            <a href="znajdz.php">Znajdź kwiaciarnię</a>
+            <ol>
+                <li>w Warszawie</li>
+                <li>w Malborku</li>
+                <li>w Poznaniu</li>
+            </ol>
+        </li>
+    </ul>
+</aside>
+<main>
+<h2>Strona dla miłośników kwiatów</h2>
+    <div>
+    <img src="img/gerbera.jpeg" alt="gerber">
+    <img src="img/gozdzik.jpeg" alt="gozdzik">
+    <img src="img/roza.jpeg" alt="roza">
+    </div>
+</main>
+<footer>
+<p>Stronę opracował: Łukasz Stępień</p>
+</footer>
 </body>
 </html>
