24-04-24 navbar, aside and header in html

--- a/Exam/24-04-24/index.html
+++ b/Exam/24-04-24/index.html
@@ -2,9 +2,33 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Salon kosmetyczny</title>
 </head>
 <body>
-
+<nav>
+    <h2>Nasza oferta</h2>
+    <ol>
+        <li>
+            <a href="twarz.html">Oczyszczanie twarzy</a>
+            <ul>
+                <li>Peeling</li>
+                <li>Maska</li>
+            </ul>
+        </li>
+        <li>Masaż</li>
+        <li>Makijaż</li>
+    </ol>
+    <a href="index.html">Strona główna</a>
+</nav>
+<section>
+    <img src="obraz1.jpg" alt="Personel">
+</section>
+<header>
+    <h1>Usługi kosmetyczne</h1>
+</header>
+<main></main>
+<footer>
+    <p>Autor: 00000000000</p>
+</footer>
 </body>
 </html>
