--- a/Exam/24-04-24/twarz.html
+++ b/Exam/24-04-24/twarz.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Salon kosmetyczny</title>
 </head>
 <body>
 
