--- a/Exam/24-04-24/index.html
+++ b/Exam/24-04-24/index.html
@@ -26,7 +26,12 @@
 <header>
     <h1>Usługi kosmetyczne</h1>
 </header>
-<main></main>
+<main>
+    <p>Witaj! Miło nam, że odwiedziłeś nasz salon. Zapoznaj się z ofertą lub
+        skontaktuj się z nami.</p>
+    <img src="obraz2.jpg" alt="Zrelaksuj się">
+    <h3>Telefon: 111 222 333</h3>
+</main>
 <footer>
     <p>Autor: 00000000000</p>
 </footer>
