--- a/Exam/24-04-24/twarz.html
+++ b/Exam/24-04-24/twarz.html
@@ -5,6 +5,39 @@
     <title>Salon kosmetyczny</title>
 </head>
 <body>
-
+<nav>
+    <h2>Nasza oferta</h2>
+    <ol>
+        <li>
+            <a href="twarz.html">Oczyszczanie twarzy</a>
+            <ul>
+                <li>Peeling</li>
+                <li>Maska</li>
+            </ul>
+        </li>
+        <li>Masaż</li>
+        <li>Makijaż</li>
+    </ol>
+    <a href="index.html">Strona główna</a>
+</nav>
+<section>
+    <img src="obraz1.jpg" alt="Personel">
+</section>
+<header>
+    <h1>Usługi kosmetyczne</h1>
+</header>
+<main>
+    <h3>Kalkulator ceny wizyty</h3>
+    <form action="#" method="post">
+        <input type="checkbox" name="peeling" id="peeling">Peeling<br>
+        <input type="checkbox" name="mask" id="mask">Maska<br>
+        <input type="checkbox" name="massage" id="massage">Masaż twarzy<br>
+        <input type="checkbox" name="makeup" id="makeup">Makijaż<br>
+        <input type="submit" value="Oblicz cenę">
+    </form>
+</main>
+<footer>
+    <p>Autor: 00000000000</p>
+</footer>
 </body>
 </html>
