--- a/Exam/24-04-24/index.html
+++ b/Exam/24-04-24/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Salon kosmetyczny</title>
+    <link href="styl7.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -20,9 +21,6 @@
     </ol>
     <a href="index.html">Strona główna</a>
 </nav>
-<section>
-    <img src="obraz1.jpg" alt="Personel">
-</section>
 <header>
     <h1>Usługi kosmetyczne</h1>
 </header>
@@ -32,6 +30,11 @@
     <img src="obraz2.jpg" alt="Zrelaksuj się">
     <h3>Telefon: 111 222 333</h3>
 </main>
+
+<section>
+    <img src="obraz1.jpg" alt="Personel">
+</section>
+
 <footer>
     <p>Autor: 00000000000</p>
 </footer>
